--- a/graphql-react-query/src/App.css
+++ b/graphql-react-query/src/App.css
@@ -1,42 +1,167 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+body {
+  background-color: #17202a;
+}
+
+html {
+  font-size: 62.5%;
+  font-family: "urbanist";
+}
+
+p,
+a,
+li,
+input,
+div {
+  font-size: 1.7rem;
+  letter-spacing: 0.12rem;
+  line-height: 1.5;
+  color: #fff;
+  list-style: none;
+}
+
+h1 {
+  color: #fff;
   text-align: center;
+  font-size: 3.4rem;
+  text-decoration: underline;
+  font-family: "syne";
+  letter-spacing: 0.1rem;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+button {
+  padding: 0rem 1.2rem;
+  border-radius: 0.3rem;
+  height: 4rem;
+  cursor: pointer;
+  border: 0;
+  background-color: hsl(160, 80%, 48%);
+  box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+  font-size: 15px;
+  transition: all 0.5s ease;
+  margin-left: 1.2rem;
+  -webkit-border-radius: 0.3rem;
+  -moz-border-radius: 0.3rem;
+  -ms-border-radius: 0.3rem;
+  -o-border-radius: 0.3rem;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+button:hover {
+  background-color: hsl(160, 80%, 48%);
+  color: hsl(0, 0%, 100%);
+  box-shadow: rgb(9, 172, 115) 0px 7px 19px 0px;
+}
+
+/* ================================================ */
+
+header {
+  height: 10rem;
+  padding: 0 10rem;
+  /* background-color: red; */
+  display: flex;
+  align-items: center;
+  & div {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    & ul {
+      display: flex;
+      gap: 3.2rem;
+      text-transform: uppercase;
+
+      & li a:hover {
+        color: #e74c3c;
+      }
+    }
   }
-  to {
-    transform: rotate(360deg);
+}
+
+/* ================================================ */
+
+footer {
+  height: 10rem;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+/* ================================================ */
+
+.section-accordion {
+  margin: auto;
+  display: flex;
+  gap: 1.6rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 6.4rem;
+
+  & li {
+    background-color: #212f3c;
+    cursor: pointer;
+    padding: 1.6rem;
+    border-radius: 0.3rem;
+    -webkit-border-radius: 0.3rem;
+    -moz-border-radius: 0.3rem;
+    -ms-border-radius: 0.3rem;
+    -o-border-radius: 0.3rem;
+    list-style-position: inside;
+    border-left: 0.2rem solid #fff;
+    list-style: none;
+    width: 300px;
+  }
+
+  & .active-btn {
+    background-color: #e74c3c;
+    color: #fff;
+
+    &:hover {
+      color: hsl(0, 0%, 100%);
+      box-shadow: rgb(167, 54, 13) 0px 7px 19px 0px;
+    }
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+/* //extra adding accordion-grid */
+
+.accordion-grid {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.accordion-question {
+  font-weight: bold;
+  font-family: "Syne";
+  letter-spacing: 0.1rem;
+  font-size: 1.7rem;
+}
+
+@media screen and (max-width: 980px) {
+  .section-form form {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .section-post ol {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
-.card {
-  padding: 2em;
+@media screen and (max-width: 720px) {
+  .section-post ol {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
-.read-the-docs {
-  color: #888;
+.pagination-section {
+  margin: auto;
+  display: flex;
+  gap: 3.2rem;
 }
